--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,6 +1,8 @@
 *{ margin: 0; padding: 0;
     box-sizing: border-box;}
 .titulo{  text-align: center;  }
-.body{ background-color: grey;margin: 0;}
+.body{ background-color: aliceblue;}
 .container-fluid{background-color: black;}
 .main{ margin: top 0; ;}
+.label{text-align: center;} 
+.compras{text-align: center; background-color: aqua;}
