agrege un container

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -5,4 +5,4 @@
 .container-fluid{background-color: black;}
 .main{ margin: top 0; ;}
 .label{text-align: center;} 
-.compras{text-align: center; background-color: aqua;}
+.compras{text-align: center;}
