--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,23 @@
-.footer {
-  background-color: rgb(0, 0, 0);
-  padding: 0;
-  margin: 0;
-  color: white;
-}
-
-.h2 {
-  text-align: center;
-  color: white;
-}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+.footer {
+  background-color: rgb(0, 0, 0);
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-size: 0.5rem;
+}
+.h1{ color: black;font-size: 2.5rem;}
+.h2 {
+  text-align: center;
+  color: white;
+}
+
+
 
 .titulo {
   text-align: center;
@@ -36,10 +39,8 @@
   text-align: center;
 }
 
-.compras {
-  text-align: left;
-  ;
-}
-.box{ text-align: left;justify-content: space-between; display: flex;}
+.box{text-align: left; display: flex;justify-content: space-between;}
+.box2{text-align: left; display: flex;justify-content: space-between;}
+.container{text-align: left; display: flex;justify-content: space-between;}
+
 /*# sourceMappingURL=style.css.map */
-.box2{ display: flex;justify-content: space-between;}
