--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,1 +1,3 @@
-.footer { background-color: rgb(0, 0, 0);padding: 0;margin: 0;color: white;}
+.footer { background-color: rgb(0, 0, 0);padding: 0;margin: 0;color: white;
+font-size: 0.5rem;
+}
